--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
     "react-icons": "^4.4.0",
+    "react-scroll": "^1.8.7",
     "swiper": "^8.3.2",
     "tailwindcss": "^3.1.8"
   }
